# DetaORM

./: .gitignore  LICENSE  README.md  pyproject.toml
detaorm/: __init__.py  base.py  client.py  field.py  paginator.py  query.py  types.py  undef.py  update.py
