[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "detaorm"
version = "0"
description = "An async ORM for DetaBase."
authors = ["CircuitSacul <circuitsacul@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
isort = "^5.12.0"
flake8 = "^5.0.4"
mypy = "^1.3.0"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
